added new visual

--- a/Mathematics/Statistics/Statistical-Models/Parametric.ipynb
+++ b/Mathematics/Statistics/Statistical-Models/Parametric.ipynb
@@ -430,6 +430,136 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import levene\n",
+    "np.random.seed(26)\n",
+    "mu1, sigma1, mu2, sigma2, mu3, sigma3 = 0,0.9,0,1.1,0,2\n",
+    "distro1, distro2, distro3 = pd.DataFrame(), pd.DataFrame(), pd.DataFrame()\n",
+    "distro1['x'] = np.random.normal(mu1, sigma1, 100)\n",
+    "distro2['x'] = np.random.normal(mu2, sigma2, 100)\n",
+    "distro3['x'] = np.random.normal(mu3, sigma3, 100)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The distributions do not have homogenous variance. P-value = 0.0000, F-statistic = 30.3979\n"
+     ]
+    }
+   ],
+   "source": [
+    "f_statistic, p_value = levene(distro1['x'], distro2['x'], distro3['x'])\n",
+    "if p_value <= 0.05:\n",
+    "    print('The distributions do not have homogenous variance. P-value = %.4f, F-statistic = %.4f'%(p_value, f_statistic))\n",
+    "else:\n",
+    "    print('The distributions have homogenous variance.P-value = %.4f, F-statistic = %.4f'%(p_value, f_statistic))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fisher’s F-test\n",
+    "#### Fisher’s F-test is useful when testing for homogeneity of variance for two groups at a time. This test compares a test statistic to a critical value to determine whether the variances are statistically the same or not. The calculated F-statistic is the variance of group one divided by the variance of group two. Group one is always the group with the larger variance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The distributions do not have homogenous variance. P-value = 0.0000, F-statistic = 5.6309\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import f\n",
+    "def f_test(inputA, inputB):\n",
+    "    group1 = np.array(inputA)\n",
+    "    group2 = np.array(inputB)\n",
+    "    if np.var(group1) > np.var(group2):\n",
+    "        f_statistic = np.var(group1) / np.var(group2)\n",
+    "        numeratorDegreesOfFreedom = group1.shape[0] - 1\n",
+    "        denominatorDegreesOfFreedom = group2.shape[0] - 1\n",
+    "    else:\n",
+    "        f_statistic = np.var(group2)/np.var(group1)\n",
+    "        numeratorDegreesOfFreedom = group2.shape[0] - 1\n",
+    "        denominatorDegreesOfFreedom = group1.shape[0] - 1\n",
+    "    p_value = 1 - f.cdf(f_statistic,numeratorDegreesOfFreedom, denominatorDegreesOfFreedom)\n",
+    "    if p_value <= 0.05:\n",
+    "        print('The distributions do not have homogenous variance. P-value = %.4f, F-statistic = %.4f'%(p_value, f_statistic))\n",
+    "    else:\n",
+    "        print('The distributions have homogenous variance. P-value = %.4f, F-statistic = %.4f'%(p_value, f_statistic))\n",
+    "f_test(distro3['x'], distro1['x'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z-statistic: 2.7386127875258306\n",
+      "Critical Value: ±1.959963984540054\n",
+      "Reject the null hypothesis: The sample mean is significantly different from the population mean.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.stats import norm\n",
+    "\n",
+    "# Known population parameters and sample statistics\n",
+    "population_mean = 70  # population mean (mu)\n",
+    "population_std = 4    # population standard deviation (sigma)\n",
+    "sample_mean = 72      # sample mean\n",
+    "sample_size = 30      # sample size (n)\n",
+    "alpha = 0.05          # significance level for a two-tailed test\n",
+    "\n",
+    "# Calculate the Z-test statistic\n",
+    "z_statistic = (sample_mean - population_mean) / (population_std / np.sqrt(sample_size))\n",
+    "\n",
+    "# Calculate the critical value for a two-tailed test\n",
+    "critical_value = norm.ppf(1 - alpha/2)\n",
+    "\n",
+    "# Compare the z_statistic with the critical value\n",
+    "print(f\"Z-statistic: {z_statistic}\")\n",
+    "print(f\"Critical Value: ±{critical_value}\")\n",
+    "\n",
+    "# Decision: reject or fail to reject the null hypothesis\n",
+    "if abs(z_statistic) > critical_value:\n",
+    "    print(\"Reject the null hypothesis: The sample mean is significantly different from the population mean.\")\n",
+    "else:\n",
+    "    print(\"Fail to reject the null hypothesis: No significant difference in the sample mean from the population mean.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## T-test – a parametric hypothesis test\n",
+    "\n",
+    "#### In the last chapter, the z-test for means was applied when population standard deviations were known. However, in the real world, it is not easy (or virtually impossible) to obtain the population standard deviation. In this section, we will discuss another hypothesis test called the t-test, which is used when the population standard deviations are unknown. The mean and the standard deviation of a population are estimated by taking the mean and the standard deviation of sample data representative of this population."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
