added new visual

--- a/Mathematics/Statistics/Statistical-Models/Parametric.ipynb
+++ b/Mathematics/Statistics/Statistical-Models/Parametric.ipynb
@@ -560,9 +560,71 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "# libraries\n",
+    "import numpy as np\n",
+    "import scipy.stats as stats\n",
+    "# creating normal distribution\n",
+    "x =np.linspace(-5, 5, 1000) #create 1000 point from -5 to 5\n",
+    "y = stats.norm.pdf(x) # create probability density for each point x  - normal distribution\n",
+    "# creating Student t distributions for 2 sample sizes n =3 and n =15\n",
+    "degree_freedom1 = 2\n",
+    "t_dis1 = stats.t.pdf(x, degree_freedom1)\n",
+    "degree_freedom2 = 15\n",
+    "t_dis2 = stats.t.pdf(x, degree_freedom2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0391"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import scipy.stats\n",
+    "round(scipy.stats.t.sf(abs(1.9), df=14),4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " The critical value is -1.7530503556925552\n",
+      " The critical value is 1.7530503556925547\n",
+      " The critical values are -2.131449545559323 and 2.131449545559323\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy.stats as stats\n",
+    "alpha = 0.05 # level of significance\n",
+    "df= 15 # degree of freedom\n",
+    "#find t critical value for left-tailed test\n",
+    "print(f\" The critical value is {stats.t.ppf(q= alpha, df =df)}\")\n",
+    "#find t critical value for right-tailed test\n",
+    "print(f\" The critical value is {stats.t.ppf(q= 1-alpha, df =df)}\")\n",
+    "##find t critical value for two-tailed test\n",
+    "print(f\" The critical values are {-stats.t.ppf(q= 1-alpha/2, df =df)} and {stats.t.ppf(q= 1-alpha/2, df =df)}\")"
+   ]
   }
  ],
  "metadata": {
