added new visual

--- a/Mathematics/Statistics/Statistical-Models/Parametric.ipynb
+++ b/Mathematics/Statistics/Statistical-Models/Parametric.ipynb
@@ -625,6 +625,83 @@
     "##find t critical value for two-tailed test\n",
     "print(f\" The critical values are {-stats.t.ppf(q= 1-alpha/2, df =df)} and {stats.t.ppf(q= 1-alpha/2, df =df)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean accuracy for Logistic Regression: 0.973\n",
+      "Mean accuracy for SVC: 0.973\n",
+      "t-statistic: 0.0, p-value: 1.0\n",
+      "There is no statistically significant difference in performance between the models.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from scipy.stats import ttest_rel\n",
+    "\n",
+    "# Load data\n",
+    "data = load_iris()\n",
+    "X = data.data\n",
+    "y = data.target\n",
+    "\n",
+    "# Initialize classifiers\n",
+    "clf1 = LogisticRegression(max_iter=200)\n",
+    "clf2 = SVC(kernel='linear')\n",
+    "\n",
+    "# Perform 10-fold cross-validation\n",
+    "scores1 = cross_val_score(clf1, X, y, cv=10, scoring='accuracy')\n",
+    "scores2 = cross_val_score(clf2, X, y, cv=10, scoring='accuracy')\n",
+    "\n",
+    "# Print the mean accuracy of each classifier\n",
+    "print(f\"Mean accuracy for Logistic Regression: {np.mean(scores1):.3f}\")\n",
+    "print(f\"Mean accuracy for SVC: {np.mean(scores2):.3f}\")\n",
+    "\n",
+    "# Conduct a paired t-test\n",
+    "t_stat, p_value = ttest_rel(scores1, scores2)\n",
+    "\n",
+    "print(f\"t-statistic: {t_stat}, p-value: {p_value}\")\n",
+    "\n",
+    "# Interpret the result\n",
+    "if p_value < 0.05:\n",
+    "    print(\"There is a statistically significant difference in performance between the models.\")\n",
+    "else:\n",
+    "    print(\"There is no statistically significant difference in performance between the models.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IQscoresA=[113, 107, 106, 115, 103, 103, 107, 102,108, 107,\n",
+    "            104, 104, 99, 102, 102, 105, 109, 97, 109, 103,\n",
+    "            103, 100, 97, 107, 116, 117, 105, 107, 104, 107]\n",
+    "IQscoresB = [102, 108, 110, 101, 98, 98, 97, 102, 102, 103,\n",
+    "             100, 99, 97, 97, 94, 100, 104, 98, 92, 104,\n",
+    "            98, 95, 92, 111, 102, 112, 100, 103, 103, 100]\n",
+    "\n",
+    "# F-test\n",
+    "import numpy as np\n",
+    "import scipy.stats as stats\n",
+    "IQscoresA = np.array(IQscoresA)\n",
+    "IQscoresB = np.array(IQscoresB)\n",
+    "f = np.var(IQscoresA, ddof=1)/np.var(IQscoresB, ddof=1) # F statistic\n",
+    "dfA = IQscoresA.size-1 #degrees of freedom A\n",
+    "dfB = IQscoresB.size-1 #degrees of freedom B\n",
+    "p = 1-stats.f.cdf(f, dfA, dfB) #p-value"
+   ]
   }
  ],
  "metadata": {
