added new visual

--- a/Mathematics/Statistics/Statistical-Models/Parametric.ipynb
+++ b/Mathematics/Statistics/Statistical-Models/Parametric.ipynb
@@ -702,6 +702,40 @@
     "dfB = IQscoresB.size-1 #degrees of freedom B\n",
     "p = 1-stats.f.cdf(f, dfA, dfB) #p-value"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from statsmodels.stats.weightstats import ttest_ind as ttest\n",
+    "t_statistic, p_value, degree_freedom = ttest(IQscoresA,\n",
+    "    IQscoresB, alternative='two-sided', usevar='pooled')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Hypothesis Testing, we defined the expected error rate for a hypothesis test as α. This is the rate at which we expect a single hypothesis test to result in a Type I error. In our example with factory machines, we are making three hypothesis tests, which means we are three times more likely to see a Type I error. While our example specifically considers multiple tests for differences in means, this applies to any type of hypothesis test. In these situations with multiple tests, we will generally define a familywise error rate (FWER) and apply p-value corrections to control for the FWER. The FWER is the probability of making a Type I error from a group of hypothesis tests. The error rate from tests within the group is the individual error rate (IER). We will define the IER and FWER as follows:\n",
+    "\n",
+    "- IER: The expected Type I error rate for an individual hypothesis test\n",
+    "- FWER: The expected Type I error rate for a group of hypothesis tests\n",
+    "\n",
+    "## The Bonferroni correction\n",
+    "\n",
+    "#### One method for adjusting the p-value to control multiple hypothesis tests is the Bonferroni correction. The Bonferroni correction controls the FWER by uniformly reducing the significance level of each individual test in the family of tests. Given that we have m tests in a family each with the p-value p i, then the p-value correction is given as follows:\n",
+    "\n",
+    "## EFFECTS ON TYPE I AND TYPE II ERRORS\n",
+    "\n",
+    "#### As discussed, the Bonferroni correction reduces the significance levels of individual tests to control the Type I error rate at the family level. We should also consider how this change impacts the Type II error rate. In general, reducing the significance level of individual tests will increase the chance of making a Type II error for that test (as is done in the Bonferroni correction). While we have only discussed the Bonferroni correction in this section, there are other methods for p-value correction that provide different trade-offs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
