added new visual

--- a/Mathematics/Statistics/Statistical-Models/Parametric.ipynb
+++ b/Mathematics/Statistics/Statistical-Models/Parametric.ipynb
@@ -835,9 +835,28 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Power based on sample size:0.85\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statsmodels.stats.power import TTestPower\n",
+    "import numpy as np\n",
+    "# Difference of distribution mean and the value to be assessed divided by the distribution standard deviation\n",
+    "effect_size = abs(100000-90000) / 2800\n",
+    "powersTT = TTestPower()\n",
+    "result = powersTT.solve_power(effect_size, nobs=3, alpha=0.05, alternative='two-sided')\n",
+    "print('Power based on sample size:{}'.format(round(result,2)))\n",
+    "# Power based on sample size: 0.85"
+   ]
   }
  ],
  "metadata": {
