--- a/Mathematics/Statistics/Statistical-Models/Non-Parametric.ipynb
+++ b/Mathematics/Statistics/Statistical-Models/Non-Parametric.ipynb
@@ -19,7 +19,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "low_temp = np.array([0, 0, 0, 0, 0, 1, 1])\n",
+    "high_temp = np.array([1, 2, 3, 1])\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
