added new visual

--- a/Mathematics/Statistics/Statistical-Models/Regression.ipynb
+++ b/Mathematics/Statistics/Statistical-Models/Regression.ipynb
@@ -22,8 +22,17 @@
     "\n",
     "## Handling serial correlation\n",
     "\n",
-    "#### If uncertain of the presence of serial correlation in the residuals, a useful next step is to analyze a Partial Autocorrelation Function (PACF) plot to assess whether serial correlation exists in the model at a significant level, which could explain issues with the model’s residuals."
+    "#### If uncertain of the presence of serial correlation in the residuals, a useful next step is to analyze a Partial Autocorrelation Function (PACF) plot to assess whether serial correlation exists in the model at a significant level, which could explain issues with the model’s residuals.\n",
+    "\n",
+    "## Homoscedasticity of the residuals\n",
+    "\n",
+    "#### In the previous chapter, we also discussed homoscedasticity. For a well-fitted model, we expect that the residuals should exhibit homoscedasticity. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
