--- a/Mathematics/Statistics/Statistical-Models/Regression.ipynb
+++ b/Mathematics/Statistics/Statistical-Models/Regression.ipynb
@@ -32,6 +32,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Multicollinearity\n",
+    "\n",
+    "#### The new assumption for MLR is that there is little or no multicollinearity in the explanatory variables. Multicollinearity is a situation that occurs when two or more variables are strongly linearly correlated. We commonly use the variance inflation factor (VIF) to detect multicollinearity. The VIF is a measurement of how much the coefficient of an explanatory variable is influenced by other explanatory variables. A lower VIF is better where the minimum value is 1, meaning there is no correlation. We generally consider a VIF of 5 or more to be too high. When a high VIF is detected in a set of explanatory variables, we repeatedly remove the variable with the highest VIF until the VIF values for each variable are below 5. Let’s look at an example with our current data. The process of removing variables with high VIFs is shown in Figure 7.5."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
