added new notes

--- a/Mathematics/Statistics/Statistical-Models/Time-Series.ipynb
+++ b/Mathematics/Statistics/Statistical-Models/Time-Series.ipynb
@@ -22,13 +22,46 @@
     "\n",
     "#### There are two types of processes generating time series; one is an ergodic process and the other is non-ergodic. An ergodic process has consistent output independent of time, whereas a non-ergodic process does not necessarily have consistent output over time. The sample mean of an ergodic process converges to the true population mean as the sample size increases. However, the sample mean of a non-ergodic process does not converge as the sample size increases; the sample mean of one end-to-end phase of a process’s output may not converge toward the process population mean similarly to the sample mean of another end-to-end phase of the same process.\n",
     "\n",
-    "#### In time-series analysis, the mean is commonly referred to as the signal. With respect to forecasting, the mean must be constant across time. We discussed in Chapter 6, Simple Linear Regression – as we will later in this chapter and in the next – the concept of first-order differencing, which is a low-pass linear filter used to remove high-frequency data from our output and pass through low-frequency data. When a signal is not constant, as when it is monotonically increasing or decreasing, for example, a first-order difference can often be applied—and repeated as needed—to produce a constant. This is one requirement of a stationary time series. We will discuss all components of stationarity in the Stationarity section of this chapter. Once a mean is constant, the variance around it can be assessed for autocorrelation. If autocorrelation exists within the variance around the mean, we can produce models to learn the patterns of the process producing it. We can also forecast the process’s future patterns. A model with a constant mean and no autocorrelation can often be forecasted with the mean using a white-noise model. For all times, t, in a series, the formulation for a first-order linear difference is this:"
+    "#### In time-series analysis, the mean is commonly referred to as the signal. With respect to forecasting, the mean must be constant across time. We discussed in Chapter 6, Simple Linear Regression – as we will later in this chapter and in the next – the concept of first-order differencing, which is a low-pass linear filter used to remove high-frequency data from our output and pass through low-frequency data. When a signal is not constant, as when it is monotonically increasing or decreasing, for example, a first-order difference can often be applied—and repeated as needed—to produce a constant. This is one requirement of a stationary time series. We will discuss all components of stationarity in the Stationarity section of this chapter. Once a mean is constant, the variance around it can be assessed for autocorrelation. If autocorrelation exists within the variance around the mean, we can produce models to learn the patterns of the process producing it. We can also forecast the process’s future patterns. A model with a constant mean and no autocorrelation can often be forecasted with the mean using a white-noise model.\n",
+    "\n",
+    "#### One common hypothesis test used in time-series analysis to assess if the variance in a series is white noise is the Ljung-Box test, created by Greta Ljung and George Box. The Ljung-Box test has the following hypotheses:\n",
+    "\n",
+    "- H o : Data points are independently distributed with no serially correlated errors\n",
+    "- H a : Data points are not independently distributed and thus present serially correlated errors\n",
+    "\n",
+    "#### This test can be applied to the residuals of any time-series model—for example, a linear model that uses time as an input or an autoregressive integrated moving average (ARIMA) model. If the result of the Ljung-Box test is the validation of the null hypothesis, the model tested is assumed to be valid. If the null hypothesis is rejected, a different model may be required."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from statsmodels.graphics.tsaplots import plot_acf\n",
+    "random_white_noise = np.random.normal(loc=0, scale=1, size=1000)"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "machine-learning-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
