--- a/Mathematics/Statistics/Statistical-Models/Time-Series.ipynb
+++ b/Mathematics/Statistics/Statistical-Models/Time-Series.ipynb
@@ -266,6 +266,15 @@
     "df_diff['realinv'] = np.diff(df_mod['realinv'], n=1)\n",
     "df_diff['realdpi'] = np.diff(df_mod['realdpi'], n=1)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Regarding the first point, if a time series is consistent with noise, there is no predictable pattern to model, and attempting to model the time series could lead to misleading results. About the second point, if the residuals of a time-series model are not consistent with noise, then there are additional patterns we can further model, and the current model is not sufficient to explain the patterns in the signal. Of course, to make these assessments, we first need to understand what noise is. In this section, we will discuss the white-noise model.\n",
+    "\n",
+    "#### White noise is a time series where the samples are independent and have a fixed variance with a mean of zero. This means that each sample of the time series is random. So, how do we assess whether a series is random? "
+   ]
   }
  ],
  "metadata": {
