added new notes

--- a/Mathematics/Statistics/Statistical-Models/Time-Series.ipynb
+++ b/Mathematics/Statistics/Statistical-Models/Time-Series.ipynb
@@ -275,6 +275,18 @@
     "\n",
     "#### White noise is a time series where the samples are independent and have a fixed variance with a mean of zero. This means that each sample of the time series is random. So, how do we assess whether a series is random? "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### In this section, we will discuss Autoregressive (AR), Moving Average (MA), and Autoregressive Moving Average (ARMA) models that are useful for stationary data. These models are useful when modeling patterns and variance around process means that output over time. When we have data that does not exhibit autocorrelation, we can use statistical and machine learning models that do not make assumptions about time, such as Logistic Regression or Naïve Bayes, so long as the data supports such use cases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
