added new models

--- a/Mathematics/Time-Series/Modern-Time-Series/Intro-Time-Series.ipynb
+++ b/Mathematics/Time-Series/Modern-Time-Series/Intro-Time-Series.ipynb
@@ -18,10 +18,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Trend\n",
+    "#### The trend is a long-term change in the mean of a time series. It is the smooth and steady movement of a time series in a particular direction. When the time series moves upward, we say there is an upward or increasing trend, while when it moves downward, we say there is a downward or decreasing trend."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
