added new models

--- a/Mathematics/Time-Series/Modern-Time-Series/Intro-Time-Series.ipynb
+++ b/Mathematics/Time-Series/Modern-Time-Series/Intro-Time-Series.ipynb
@@ -22,7 +22,12 @@
    "metadata": {},
    "source": [
     "## Trend\n",
-    "#### The trend is a long-term change in the mean of a time series. It is the smooth and steady movement of a time series in a particular direction. When the time series moves upward, we say there is an upward or increasing trend, while when it moves downward, we say there is a downward or decreasing trend."
+    "\n",
+    "#### The trend is a long-term change in the mean of a time series. It is the smooth and steady movement of a time series in a particular direction. When the time series moves upward, we say there is an upward or increasing trend, while when it moves downward, we say there is a downward or decreasing trend.\n",
+    "\n",
+    "## Seasonal\n",
+    "\n",
+    "#### When a time series exhibits regular, repetitive, up-and-down fluctuations, we call that seasonality. For instance, retail sales typically shoot up during the holidays, specifically Christmas in western countries. Similarly, electricity consumption peaks during the summer months in the tropics and the winter months in colder countries. "
    ]
   },
   {
